# doxter-RAG

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
Main/: main.py  ui.py
Main/components/: faq.py  sidebar.py
Main/core/: FileParser.py  api.py  chunking.py  embedding.py  prompts.py  qa.py  summary.py
